[metadata]
name = oftools-compile
author = Tmaxsoft
author-email = tfsadmin@tmaxsoft.com
summary = A general purpose build tool used in the Openframe environment
license = Tmaxsoft Copyright
license_files = LICENSE
description-file = README.md
home-page = http://pypi.python.org/pypi/oftools-compile
requires-python = >=3.5
classifier = 
    Development Status :: 1
    Environment :: Console
    Environment :: Openframe
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: Tmaxsoft Copyright
    Operating System :: Linux
    Programming Language :: Python

[files]
packages =
    oftools_compile

[entry_points]
console_scripts =
    oftools_compile = oftools_compile.Main:main

