[metadata]
name = oftools-compile
author = Tmaxsoft
author-email = tfsadmin@tmaxsoft.com
summary = A general purpose build tool used in the Openframe environment
license = CC4.0-BY-NC-SA
license_files = LICENSE.md
description-file = README.md
home-page = https://github.com/tmaxsoft-us/oftools_compile
requires-python = >=3.5
classifier = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[files]
packages =
    oftools_compile

[entry_points]
console_scripts =
    oftools_compile = oftools_compile.Main:main
